--- a/site/about/index.html
+++ b/site/about/index.html
@@ -20,7 +20,7 @@ title: About
 			<p>
 			Zenan is a robot unicorn who gallops into the sunset in a trail of web and mobile development rainbows. He has great passion in designing and developing clean and functional web and mobile applications.	
 			</p>
-			<footer>– Mike Chen, Minitheory Pte Ltd.</footer>
+			<footer>– Mike Chen, Minitheory</footer>
 		</blockquote>	
 	</div>
 </div>
